--- a/piezo.html
+++ b/piezo.html
@@ -114,7 +114,7 @@
 
         <h4>La Formule</h4>
 
-        <p>Nous avons trouvé une formule permettant de calculer la charge électrique générée par une cellule piézo-électrique pour une pression donnée sur un matériau donné. La voici : $$Q = d_{33} * F$$ où \(d_{33}\)</sub> est le coefficient de piezo-électricité
+        <p>Nous avons trouvé une formule permettant de calculer la charge électrique générée par une cellule piézo-électrique pour une pression donnée sur un matériau donné. La voici : $$Q = d_{33} \times F$$ où \(d_{33}\)</sub> est le coefficient de piezo-électricité
             propre au matériau de la cellule et F la force appliquée, aussi appelée pression ou même stress. Nous l'avons trouvée sur le site <a href="https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html">American Piezo</a></p>
 
         <h4>Protocole Mathématique et Expérimental :</h4>
@@ -126,9 +126,7 @@
 
         <p>On a F la pression appliquée par Bilal à chaque pas (la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte
             mécanique.
-            <br/> Or comme nous l'ont appris les documents scientifiques (allez voir la bibliographie pour plus d'informations) :<br/> \(Q = d_{33} * F\)<br/> On sait que \(F = {196.2N \over 2.8*10^{-15}m^2}\) et \(d_{33} = 2.33*10^{-12}\)<br/> Par conséquent,
-            dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de \(1.456*10^{-6}C\)<br/> Or \(1C = 1000mAs\) donc Bilal génère \(1.456*10^{-3}mAs\) ce qui nous fait donc à peu près \(5mAh\).<br/> Ce résultat est absolument
-            insignifiant, rendant l'utilisation de la piezo-électricité pour alimenter des objets connectés totalement inefficace</p>
+            <br/> Or comme nous l'ont appris les documents scientifiques (allez voir la bibliographie pour plus d'informations) :<br/> \(Q = d_{33} \times F\)<br/> On sait que \(F = {196.2N \over 2.8\times 10^{-15}m^2}\) et \(d_{33} = 2.33\times 10^{-12}\)<br/>            Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de \(1.456\times 10^{-6}C\)<br/> Or \(1C = 1000mAs\) donc Bilal génère \(1.456\times 10^{-3}mAs\) ce qui nous fait donc à peu près \(5mAh\).<br/>            Ce résultat est absolument insignifiant, rendant l'utilisation de la piezo-électricité pour alimenter des objets connectés totalement inefficace</p>
 
         <h3>Conclusion sur la piezoélectricité :</h3>
 
