--- a/journal.html
+++ b/journal.html
@@ -143,24 +143,30 @@
             <p>Nous mesurons l’intensité du courant électrique dans le circuit quand Bilal se déplace. Nous pourrons donc relever des valeurs qui nous permettront de tracer une courbe de l’intensité en fonction du poids appliqué.</p>
             <h4>Résultats :</h4>
             <p>Nos résultats sont absolument ridicules, nous n’arrivons même pas à mesurer l’intensité tellement elle est faible. Nous nous retrouvons donc dans l’incapacité de tracer une courbe avec de tels résultats. Nous utiliserons donc une formule trouvée
-                dans une publication scientifique sur la piézo électricité (“Mechanical Vibrations: Applications to Equipment” Par Yvon Mori), cette formule est : Q = d33P Où Q est la charge électrique en Coulomb, d33 est le coefficient de piézoélectricité
-                (propre au matériau de la cellule) et P la pression appliquée sur la cellule.</p>
+                dans une publication scientifique sur la piézo électricité (“Mechanical Vibrations: Applications to Equipment” Par Yvon Mori), cette formule est : \(Q = d_{33} \times F\) Où Q est la charge électrique en Coulomb, \(d_{33}\) est le coefficient
+                de piézoélectricité (propre au matériau de la cellule) et F la pression appliquée sur la cellule.</p>
         </div>
         <hr/>
         <div>
             <h3>Jour 9 : 21/11/2017</h3>
             <h4>Objectif :</h4>
-            <p>Détermination d’un poid de référence en N et d’une surface de référence, et donc une pression de référence. Ce qui nous permet d'extrapoler l’intensité produite par n’importe quel poid sur une cellule piezo-électrique d’une surface donnée.</p>
+            <p>Détermination d’un poid de référence (en N) et d’une surface de référence (en m<sup>2</sup>), et donc une pression de référence (en Pa). Ce qui nous permet d'extrapoler l’intensité produite par n’importe quel poid sur une cellule piezo-électrique
+                d’une surface donnée.</p>
             <h4>Matériel :</h4>
             <p>x1 Poid de référence<br/> x1 Balance<br/> x1 Cellule piezo électrique</p>
             <h4>Déroulement :</h4>
             <p>Nous mesurons l’aire de la surface de contact de la cellule piezo électrique. Ensuite nous pesons le poids de référence. Nous déduisons donc la pression exercée par le poids sur la cellule.</p>
             <h4>Résultats :</h4>
-            <p>Nous avons calculé la surface de contact de la cellule : surface de contact de la cellule : Sréférence=32=28,26 mm2=2,810-5 m2 Nous avons ensuite pesé le poids de référence : poid de référence : Préférence=178,1 g = 0,18 kg = 0,189,81 = 1,75
-                N Notre pression de référence sera donc : Préférence=FréférenceSréférence= 1,752,810-5=625 000 P Or nous connaissons la relation Q=d33P, dont voici la représentation graphique : On a donc : Qréférence=2,3310-12625 000=1.45610-6 C Or on
-                a 1C = 103 mA.s Par conséquent : Iréférence=1,45610-6103=1,45610-3mA.s d’où : Iréférence= 524110-3 5 mA.h Or Bilal pèse 40kg donc 392.4N (nous admettons que Bilal applique une force égale à la moitié de son poid à chaque pas) soit 224
-                fois plus que le poid de référence, on a donc une intensité de 0.5A.h par pas si on garde la même surface de contact. Conclusion : Ainsi que nous l’avons vu, nous obtenons des résultats absolument négligeables, il est donc illusoir d’imaginer
-                alimenter des objets connectés avec cette source d’énergie. Cependant, cette source d’énergie serait adaptée pour être placée dans le sol, dans des zones passantes. La piézoélectricité n’est donc pas une option pour les particuliers.</p>
+            <p>Nous avons calculé la surface de contact de la cellule : surface de contact de la cellule : \(S_{référence}=3^2\pi=28,26mm^2=2,810 \times 10^{-5} m^2\) Nous avons ensuite pesé le poids de référence : poid de référence : \(P_{référence}=178,1g
+                = 0,18kg = 0,18 \times 9,81 = 1,75N\) Notre pression de référence sera donc : \(P_{référence}={F_{référence} \over S_{référence}}= {1,75 \over 2,810\times 10^{-5}}=625 000P\) Or nous connaissons la relation \(Q=d_{33} \times F\), dont
+                voici la représentation graphique :</p>
+            <img style="width:50%;margin-left:20px;" src="graph/piezo/graph.JPG" />
+            <p>On a donc : \(Q_{référence}=2,33 \times 10^{-12} \times 625 000=1.456 \times 10^{-6}C\) Or on a \(1C = 103 mA.s\) Par conséquent : \(I_{référence}=1,456\times10^{-6} \times 10^3=1,456\times 10^{-3}mA.s\) d’où : \(I_{référence} = 5241\times
+                10^{-3} \approx 5 mA.h\) Or Bilal pèse 40kg donc 392.4N (nous admettons que Bilal applique une force égale à la moitié de son poid à chaque pas) soit 224 fois plus que le poid de référence, on a donc une intensité de 0.5A.h par pas si
+                on garde la même surface de contact.</p>
+            <h4>Conclusion :</h4>
+            <p>Ainsi que nous l’avons vu, nous obtenons des résultats absolument négligeables, il est donc illusoir d’imaginer alimenter des objets connectés avec cette source d’énergie. Cependant, cette source d’énergie serait adaptée pour être placée dans
+                le sol, dans des zones passantes. La piézoélectricité n’est donc pas une option pour les particuliers.</p>
         </div>
         <hr/>
         <div>
@@ -178,11 +184,12 @@
             <p>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Peltier dans l’eau pour faire chauffer l’une de ses deux faces. On utilise le dissipateur
                 thermique pour refroidir l’autre face du peltier. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température ∆T, associe la tension U spécifiée en circuit
                 ouvert. Nous pouvons alors tracer un graphique de ces résultats. Il en résulte une droite, passant par l’origine, dont nous pouvons calculer le coefficient directeur appelé coefficient Seebeck. Par la suite, nous pouvons brancher le module
-                en série avec une résistance de 10Ω, et grâce à la relation U=RxI , en déduire l’intensité parcourant le circuit.</p>
+                en série avec une résistance de 10Ω, et grâce à la relation \(U=R\times I\) , en déduire l’intensité parcourant le circuit.</p>
             <h4>Résultats :</h4>
-            <p>En plaçant nos points sur un repère orthonormé, nous obtenons une droite passant par l’origine du repère. La droite représente la fonction qui à toute différence de température en °K aux faces de notre peltier, associe une tension en V. Avec
-                une résistance de 10Ω, pour une tension de 1mV, on calcule une intensité de 100mA, comme U=RI nous pouvons calculer une intensité pour n’importe quelle tension. Cependant ce résultat est théorique car il ne prend pas en compte la résistance
-                interne de notre module peltier qui est relativement élevée (elle est la cause du mauvais rendement).</p>
+            <img style="width:50%;margin-left:20px;" src="graph/seebeck/dtu.png" />
+            <p>En plaçant nos points sur un repère orthonormé, nous obtenons une droite passant par l’origine du repère. La droite représente la fonction qui à toute différence de température (en K) aux faces de notre peltier, associe une tension en V. Avec
+                une résistance de 10Ω, pour une tension de 1mV, on calcule une intensité de 100mA, comme \(U=R\times I\) nous pouvons calculer une intensité pour n’importe quelle tension. Cependant ce résultat est théorique car il ne prend pas en compte
+                la résistance interne de notre module peltier qui est relativement élevée (elle est la cause du mauvais rendement).</p>
         </div>
         <hr/>
         <div>
@@ -193,11 +200,12 @@
             <p>x1 Chauffage<br/>x1 Module à effet Peltier<br/> x1 bécher<br/>De l’eau du robinet<br/>x1 multimètre<br/>x1 dissipateur thermique (puissance max dissipé 65W) => Ventirad de PC<br/>x1 résistance de 10Ω</p>
             <h4>Déroulement :</h4>
             <p>Même chose que la semaine précédente, nous allons mesurer de nouvelles tensions pour affiner le graphique. Ensuite, en branchant un ampèremètre en série dans le circuit ainsi qu’une résistance de 10Ω, nous allons calculer la résistance interne
-                du module peltier, ce qui nous permettra de trouver une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation U=RI.</p>
+                du module peltier, ce qui nous permettra de trouver une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation \(U=R\times I\).</p>
             <h4>Résultats :</h4>
-            <p>On sait que R=10+X où X représente la résistance interne du module peltier et 10 la résistance déjà présente dans le circuit. De plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit les relations
-                suivantes : I = UR ⇔ I = U10+X ⇔ X = UI-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans le circuit, on trouve : I = 0,019 Aet U = 0,36 V On en déduit la résistance interne du module peltier qui
-                est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=UR, et que R est constant, nous avons trouvé la fonction qui à toute tension mesurée au bornes du module peltier associe une intensité électrique.
+            <p>On sait que \(R=10+x\) où \(x\) représente la résistance interne du module peltier et 10 la résistance déjà présente dans le circuit. De plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit
+                les relations suivantes : \(I = {U\over R} \Leftrightarrow I = {U\over 10+x} ⇔ x = {U\over I}-10\) Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans le circuit, on trouve : I = 0,019 Aet U = 0,36 V On
+                en déduit la résistance interne du module peltier qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme \(I={U\over R}\), et que R est constant, nous avons trouvé la fonction qui à toute tension
+                mesurée au bornes du module peltier associe une intensité électrique.
             </p>
         </div>
         <hr/>
@@ -220,7 +228,157 @@
             <h4>Protocole :</h4>
             <p>Faire varier la luminosité d’une lampe afin de trouver la fonction qui à toute intensité lumineuse associe une puissance.</p>
             <h4>Résultats :</h4>
-            <p></p>
+            <table border="1">
+                <tr>
+                    <th>Puissance (en W)</th>
+                    <th>Intensité (en mA)</th>
+                    <th>Tension (en V)</th>
+                    <th>Résistance (en &Omega;)</th>
+                </tr>
+
+                <tr>
+                    <td>0,00221</td>
+                    <td>0,065</td>
+                    <td>34</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>0,0139728</td>
+                    <td>0,426</td>
+                    <td>32,8</td>
+                    <td>90</td>
+                </tr>
+                <tr>
+                    <td>0,0149778</td>
+                    <td>0,471</td>
+                    <td>31,8</td>
+                    <td>87</td>
+                </tr>
+                <tr>
+                    <td>0,01507</td>
+                    <td>0,55</td>
+                    <td>27,4</td>
+                    <td>85</td>
+                </tr>
+                <tr>
+                    <td>0,014157</td>
+                    <td>0,585</td>
+                    <td>24,2</td>
+                    <td>80</td>
+                </tr>
+                <tr>
+                    <td>0,0106222</td>
+                    <td>0,614</td>
+                    <td>17,3</td>
+                    <td>70</td>
+                </tr>
+                <tr>
+                    <td>0,0082632</td>
+                    <td>0,626</td>
+                    <td>13,2</td>
+                    <td>60</td>
+                </tr>
+                <tr>
+                    <td>0,006678</td>
+                    <td>0,630</td>
+                    <td>10,6</td>
+                    <td>50</td>
+                </tr>
+                <tr>
+                    <td>0,0056426</td>
+                    <td>0,634</td>
+                    <td>8,9</td>
+                    <td>40</td>
+                </tr>
+                <tr>
+                    <td>0,0048972</td>
+                    <td>0,636</td>
+                    <td>7,7</td>
+                    <td>30</td>
+                </tr>
+                <tr>
+                    <td>0,0042746</td>
+                    <td>0,638</td>
+                    <td>6,7</td>
+                    <td>20</td>
+                </tr>
+                <tr>
+                    <td>0,003834</td>
+                    <td>0,639</td>
+                    <td>6</td>
+                    <td>10</td>
+                </tr>
+                <tr>
+                    <td>0,003456</td>
+                    <td>0,64</td>
+                    <td>5,4</td>
+                    <td>0</td>
+                </tr>
+            </table>
+            <br/>
+            <img style="width:50%;margin-left:20px;" src="graph/sol/pt.png" />
+            <p>Nous avons trouvé la meilleure configuration, quand la résistance est de 85&Omega;</p>
+            <h4>Protocole</h4>
+            <p>Faire varier la luminosité d’une lampe afin de trouver la fonction qui à toute intensité lumineuse associe une puissance.</p>
+            <h4>Résultats</h4>
+            <table border="1">
+                <tr>
+                    <th>Tension (en V)</th>
+                    <th>Intensité (en mA)</th>
+                    <th>Intensité Lumineuse (en Lux)</th>
+                    <th>Puissance (en W)</th>
+                </tr>
+                <tr>
+                    <td>0,27</td>
+                    <td>16,5</td>
+                    <td>620</td>
+                    <td>4,455</td>
+                </tr>
+                <tr>
+                    <td>0,274</td>
+                    <td>17</td>
+                    <td>670</td>
+                    <td>4,658</td>
+                </tr>
+                <tr>
+                    <td>0,307</td>
+                    <td>19,3</td>
+                    <td>790</td>
+                    <td>5,9251</td>
+                </tr>
+                <tr>
+                    <td>0,383</td>
+                    <td>23,5</td>
+                    <td>1070</td>
+                    <td>9,0005</td>
+                </tr>
+                <tr>
+                    <td>0,438</td>
+                    <td>26,8</td>
+                    <td>1410</td>
+                    <td>11,7384</td>
+                </tr>
+                <tr>
+                    <td>0,456</td>
+                    <td>28,3</td>
+                    <td>1760</td>
+                    <td>12,9048</td>
+                </tr>
+                <tr>
+                    <td>0,487</td>
+                    <td>30,3</td>
+                    <td>2830</td>
+                    <td>14,7561</td>
+                </tr>
+                <tr>
+                    <td>0,493</td>
+                    <td>30,7</td>
+                    <td>3250</td>
+                    <td>15,1351</td>
+                </tr>
+            </table>
+            <br/>
+            <img style="width:50%;margin-left:20px;" src="graph/sol/pl.png" />
         </div>
 
     </section>
