--- a/presentation.html
+++ b/presentation.html
@@ -26,7 +26,7 @@
                     </ul>
                 </li>
                 <li><a href="journal.html">Carnet de Bord</a></li>
-                <li><a href="annexes.html">Annexes</a>
+                <li><a>Annexes</a>
                     <ul>
                         <li><a href="biblio.html">Bibliographie</a></li>
                         <li><a href="photos.html">Photos</a></li>
