ADDED CAPACITORS TO PHOTOS

--- a/photos.html
+++ b/photos.html
@@ -141,6 +141,22 @@
             <img src="data/seebeck/mesureseebeck.jpg" />
             <img src="data/seebeck/seebeck.jpg" />
         </div>
+
+        <h4>Capacitors</h4>
+
+        <div id="capacitorpic">
+            <img src="data/capacitor/1.jpg" />
+            <img src="data/capacitor/2.jpg" />
+            <img src="data/capacitor/3.jpg" />
+            <img src="data/capacitor/4.jpg" />
+            <img src="data/capacitor/5.jpg" />
+            <img src="data/capacitor/6.jpg" />
+            <img src="data/capacitor/7.jpg" />
+            <img src="data/capacitor/8.jpg" />
+            <img src="data/capacitor/9.jpg" />
+            <img src="data/capacitor/10.jpg" />
+            <img src="data/capacitor/11.jpg" />
+        </div>
     </section>
     <hr/>
     <footer>
