--- a/photos.html
+++ b/photos.html
@@ -51,6 +51,11 @@
     <section id="content">
 
         <h3>Photos</h3>
+        <h4>Nous (Malo, Barthélemy et Bilal)</h4>
+        <img style="width:50%;margin-left:25%" src="data/teampic.jpg" />
+
+
+
 
         <h4>Capteur Solaire</h4>
         <div id="solpic">
