--- a/index.html
+++ b/index.html
@@ -62,5 +62,7 @@
     <div id="tothetop"><img src="tothetop.png" title="Vers le haut de la page" /></div>
 </body>
 <script src="script.js"></script>
-
+<script>
+    window.location = "presentation.html";
+</script>
 </html>
