--- a/presentation.html
+++ b/presentation.html
@@ -62,15 +62,15 @@
 
         <h3>L'énergie et les objets connectés</h3>
 
-        <p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (on
-            estime leur nombre à 30 par foyer en 2030 selon l'institu GFK). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu
+        <p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (selon l'institu GFK, on
+            estime leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu
             recyclées. Il faut donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
         <hr/>
         <h3>Le problème du Lithium</h3>
 
         <p style="width:72%;float:left;">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer
-            l'environnement. Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluants la nature. Enfin le lithuim est un élément alcalin tres réactif. Par conséquent les batteries au lithium sont
-            inflammables et peuvent exploser si mal utilisées. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en envisageant 3 possibles solutions
+            l'environnement. Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluants la nature. Enfin le lithium est un élément alcalin très réactif. Par conséquent les batteries au lithium sont
+            inflammables et peuvent exploser si elles sont mal utilisées. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en envisageant 3 possibles solutions
             au problème</p>
 
         <img style="width:20%;float:right;" src="ionexploding.jpg" />
