--- a/solar.html
+++ b/solar.html
@@ -52,7 +52,7 @@
 
         <h2>L'énergie solaire</h2>
 
-        <p>L'énergie solaire est maintenant maitrisé et de plus en plus utilisée. C'est une énergie renouvellable possédant un bon rendement (\approx 15) par apport aux autres sources d'énergie.<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un
+        <p>L'énergie solaire est maintenant maitrisée et de plus en plus utilisée. C'est une énergie renouvellable possédant un bon rendement (approximativement 15) par rapport aux autres sources d'énergies.<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un
             objet connecté, qu'il soit à l'intérieur ou à l'extérieur du batiment.<br/>
         </p>
 
@@ -153,10 +153,10 @@
 
         <p>Nous exprimons l'intensité en fonction de la résistance :</p>
         <img src="graph/sol/ir.png" />
-        <p>Le panneau solaire est affecté par les changement de résistance, car comme U=RxI, nous aurions une droite dans le cas contraire.</p>
+        <p>Le panneau solaire est affecté par les changements de résistance, car comme U=RxI, nous aurions une droite dans le cas contraire.</p>
         <p>Nous faisons ensuite la tension en fonction de la résistance, nous obtenons ceci :</p>
         <img src="graph/sol/tr.png" />
-        <p>On observe une diminution de la tension, ce qui est logique puisque \(U=R\times I\) et que l'intensité augmente plus lentement que la résistance baisse mais pas de maniere linéaire. La résistance influt donc sur le voltage que peut produire un panneau solaire</p>
+        <p>On observe une diminution de la tension, ce qui est logique puisque \(U=R\times I\) et que l'intensité augmente plus lentement que la résistance baisse mais pas de maniere linéaire. La résistance influe donc sur le voltage que peut produire un panneau solaire.</p>
         <p>Nous pouvons ensuite refaire le même tableau en ajoutant la colonne de puissance, qui s'obtient par la simple multiplication de l'intensité et de la tension (P= UxI):</p>
 
 
@@ -248,18 +248,18 @@
             </tr>
         </table>
 
-        <p>Nous tracons le graphique représentant la puissance en fonction de la résistance:</p>
+        <p>Nous traçons le graphique représentant la puissance en fonction de la résistance :</p>
 
         <img src="graph/sol/pt.png" />
 
-        <p>Ce panneau solaire atteint son efficacité maximale quand la résistance sur du circuit est de 85&Omega;. Notre object connecté doit donc avoir une résistance maximal de 85&Omega; ou moins si l'on en ajoute une.</p>
-      </p>Cepandant nous ne savons pas l'évolution de la puissance en fonction de l'éclairage. C'est problématique car nous pourrions par exemple avoir un éclairage critique en dessous du quel la production d'énergie serait marginal. </p>
+        <p>Ce panneau solaire atteint son efficacité maximale quand la résistance du circuit est de 85&Omega;. Notre objet connecté doit donc avoir une résistance maximal de 85&Omega; ou moins si l'on en ajoute une.</p>
+        <p>Cepandant, nous ne connaissons pas l'évolution de la puissance en fonction de l'éclairage. C'est problématique car nous pourrions, par exemple, avoir un éclairage critique en dessous duquel la production d'énergie serait marginale.</p>
 
         <hr/>
 
         <h3>Expérience 2</h3>
 
-        <p>Nous allons maintenant chercher à caluler la puissance produite par la cellule en fonction du nombre de lux. Nous allons mettre une résistance de 85&Omega; pour avoir un courant electrique plus puissant permettant de réduire les erreurs dû aux appareils.
+        <p>Nous allons maintenant chercher à caluler la puissance produite par la cellule en fonction du nombre de lux. Nous allons mettre une résistance de 85&Omega; pour avoir un courant électrique plus puissant permettant de réduire les erreurs dûes aux appareils.
           Dans cette expérience nous ferons varier l'intensité lumineuse.</p>
 
         <h4>Matériel :</h4>
@@ -391,7 +391,7 @@
             </tr>
         </table>
 
-        <p>Nous tracons alors la courbe correspondant à la fonction qui à toute intensité lumineuse L associe une puissance P pour notre panneau solaire :</p>
+        <p>Nous traçons alors la courbe correspondant à la fonction qui à toute intensité lumineuse L associe une puissance P pour notre panneau solaire :</p>
 
         <img src="graph/sol/pl.png" />
 
@@ -402,7 +402,7 @@
         <h4>Le support solaire</h4>
 
         <p>Le support solaire est un support sur lequel on peut placer et brancher un objet connecté afin qu'il se charge à l'aide d'un petit panneau solaire placé sur le support; Ce support serait placé en intérieur (ou en extérieur) et alimenterait l'objet
-            avec la lumière de la pièce. Il est interressant de noter que des object connecté sans batteries alimentées par des panneaux solaires existes deja.</p>
+            avec la lumière de la pièce. Il est interressant de noter que des objets connectés sans batteries alimentées par des panneaux solaires existent déjà.</p>
 
 
     </section>
