--- a/solar.html
+++ b/solar.html
@@ -52,7 +52,7 @@
 
         <h2>L'énergie solaire</h2>
 
-        <p>L'énergie solaire est maintenant maitrisée et de plus en plus utilisée. C'est une énergie renouvellable possédant un bon rendement (approximativement 15) par rapport aux autres sources d'énergies.<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un
+        <p>L'énergie solaire est maintenant maîtrisée et de plus en plus utilisée. C'est une énergie renouvellable possédant un bon rendement (approximativement 15) par rapport aux autres sources d'énergies.<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un
             objet connecté, qu'il soit à l'intérieur ou à l'extérieur du batiment.<br/>
         </p>
 
