--- a/presentation.html
+++ b/presentation.html
@@ -62,9 +62,9 @@
 
         <h3>L'énergie et les objets connectés</h3>
 
-        <p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (selon l'institu GFK, on
+        <p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (selon l'institut GFK, on
             estime leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu
-            recyclées. Il faut donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
+            recyclées. Il faut donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce problème.</p>
         <hr/>
         <h3>Le problème du Lithium</h3>
 
@@ -80,11 +80,11 @@
         <h4>Définition :</h4>
 
         <p style="width:72%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant
-            électrique"
+            électrique."
             <br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Effet_photovoltaïque">http://www.wikipedia.org/</a></sub></p>
         <img style="width:20%;float:right;" src="photovolt.png" />
         <h4>Exemple :</h4>
-        <p style="width:72%;float:left;">C'est une solution classique et connue de tous mais qui reste très efficace. On pourrait imaginer un tout petit panneau solaire permettant de récupérer suffisament d'énergie pour alimenter un objet connecté de temps en temps. Une autre solution
+        <p style="width:72%;float:left;">C'est une solution classique et connue de tous mais qui reste très efficace. On pourrait imaginer un tout petit panneau solaire permettant de récupérer suffisamment d'énergie pour alimenter un objet connecté de temps en temps. Une autre solution
             serait de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage de notre cas est que nous ne demandons pas énormément d'énergie, l'objet pourrait alors être en intérieur du moment qu'il reçoit assez de lumière.</p>
 
 
@@ -94,7 +94,7 @@
         <h3>La Piezoélectricité</h3>
 
         <h4>Définition :</h4>
-        <p style="width:72%;float:left;">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
+        <p style="width:72%;float:left;">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique."<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
         <img style="width:20%;float:right;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
         <h4>Exemple :</h4>
         <p style="width:72%;float:left;">Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par son activité pour alimenter
@@ -109,12 +109,12 @@
 
         <h4>Définition :</h4>
         <p style="width:72%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corps conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann
-            Seebeck".
+            Seebeck."
             <br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
         <img style="width:20%;float:right;" src="seebeck.bmp" />
         <h4>Exemple :</h4>
         <p style="width:72%;float:left;">Il y a de très nombreuses applications possibles pour cette réaction. On pourrait imaginer des bracelets connectés pour le sport, avec une face en contact avec la peau du sportif et l'autre face à l'air libre et qui est donc moins chaude. On pourrait ainsi
-            récupérer l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Seebeck intégrés à des radiateurs, permettant ainsi de les controler finement.</p>
+            récupérer l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Seebeck intégrés à des radiateurs, permettant ainsi de les contrôler finement.</p>
 
     </section>
     <hr/>
