--- a/solar.html
+++ b/solar.html
@@ -52,8 +52,8 @@
 
         <h2>L'énergie solaire</h2>
 
-        <p>L'énergie solaire est maintenant maîtrisée et de plus en plus utilisée. C'est une énergie renouvellable possédant un bon rendement (approximativement 15) par rapport aux autres sources d'énergies.<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un
-            objet connecté, qu'il soit à l'intérieur ou à l'extérieur du batiment.<br/>
+        <p>L'énergie solaire est maintenant maîtrisée et de plus en plus utilisée. C'est une énergie renouvelable possédant un bon rendement (approximativement 15) par rapport aux autres sources d'énergies.<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un
+            objet connecté, qu'il soit à l'intérieur ou à l'extérieur du bâtiment.<br/>
         </p>
 
         <p>
@@ -402,7 +402,7 @@
         <h4>Le support solaire</h4>
 
         <p>Le support solaire est un support sur lequel on peut placer et brancher un objet connecté afin qu'il se charge à l'aide d'un petit panneau solaire placé sur le support; Ce support serait placé en intérieur (ou en extérieur) et alimenterait l'objet
-            avec la lumière de la pièce. Il est interressant de noter que des objets connectés sans batteries alimentées par des panneaux solaires existent déjà.</p>
+            avec la lumière de la pièce. Il est intéressant de noter que des objets connectés sans batteries alimentées par des panneaux solaires existent déjà.</p>
 
 
     </section>
