--- a/piezo.html
+++ b/piezo.html
@@ -52,7 +52,7 @@
 
         <h2>La Piézoélectricité</h2>
         <h3>Definition :</h3>
-        <p>“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”.</p>
+        <p>“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique.”</p>
 
         <h3>Expérience 1</h3>
 
@@ -130,17 +130,17 @@
 
         <h3>Conclusion sur la piezoélectricité :</h3>
 
-        <p>Nous avons vu grace à nos expériences que l'on peut en effet produire de l'énergie grâce à des cellules piezoélectriques. Cependant, elles sont trop peu efficaces afin d'être utilisées dans le cadre d'un usage personnel. Nous pouvons cependant
-            envisager l'utilisation de capacitors afin d'accumuler de l'énergie pour alimenter de manière ponctuelle un objet connecté.<br/> Pour aller plus loin, nous pourrions envisager des routes ou même un sol très féquenté bardé de cellules piezoélectriques.
-            La contrainte mécanique d'une foule ou de plusieures voitures serait suffisante afin d'alimenter des objets connectés ou même pour alimenter l'éclairage public.</p>
+        <p>Nous avons vu grâce à nos expériences que l'on peut en effet produire de l'énergie grâce à des cellules piézoélectriques. Cependant, elles sont trop peu efficaces afin d'être utilisées dans le cadre d'un usage personnel. Nous pouvons cependant
+            envisager l'utilisation de capacitors afin d'accumuler de l'énergie pour alimenter de manière ponctuelle un objet connecté.<br/> Pour aller plus loin, nous pourrions envisager des routes ou même un sol très fréquenté bardé de cellules piézoélectriques.
+            La contrainte mécanique d'une foule ou de plusieurs voitures serait suffisante afin d'alimenter des objets connectés ou même pour alimenter l'éclairage public.</p>
 
 
         <h3>Applications :</h3>
 
         <h4>Plaque terrestre</h4>
 
-        <p>Le principe est de placer une plaque possédant plein de cellules piezoélectriques en dessous afin de produire de l'énergie lorsque quelqu'un marche dessus. Pour maximiser son rendement, il faudrait la placer dans un passage très fréquenté. Les
-            cellules piezoélectriques ont un rendement bien trop faible pour un usage personnel ou pour un simple objet connecté dans une maison. Cependant, il peut être utilisé par la ville pour alimenter quelques services à l'aide des plaques que nous
+        <p>Le principe est de placer une plaque possédant plein de cellules piézoélectriques en dessous afin de produire de l'énergie lorsque quelqu'un marche dessus. Pour maximiser son rendement, il faudrait la placer dans un passage très fréquenté. Les
+            cellules piézoélectriques ont un rendement bien trop faible pour un usage personnel ou pour un simple objet connecté dans une maison. Cependant, il peut être utilisé par la ville pour alimenter quelques services à l'aide des plaques que nous
             vous avons présentées. Cela pourrait aussi servir à une entreprise (assez grande) ou même à un établissement, du moment qu'un passage est bien fréquenté pour que la plaque produise un bon rendement.</p>
 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
