correction de fautes

--- a/journal.html
+++ b/journal.html
@@ -53,22 +53,22 @@
 
             Carnet de bord</h2>
         <div>
-            <h3>Jour 0: date : 19/09/2017</h3>
+            <h3>Jour 0 : 19/09/2017</h3>
             <h4>Déroulement :</h4>
             <p>Présentation des TPE et formation des groupes.</p>
         </div>
         <hr/>
         <div>
-            <h3>Jour 1 : date : 26/09/2017</h3>
+            <h3>Jour 1 : 26/09/2017</h3>
             <h4>Objectifs :</h4>
             <p>Trouver un sujet, une problématique et éventuellement commencer à rechercher des informations qui seront utiles dans nos expériences.</p>
             <h4>Résultats :</h4>
-            <p>Notre problématique est: “Comment l’énergie solaire thermique permet-elle de générer de l'électricité propre et renouvelable”. Nous pensons utiliser le Soleil pour faire bouillir de l’eau. Dans ce but nous avons cherché la quantité d’énergie
-                nécessaire à faire bouillir 50 gramme d’eau. Calcul de l’énergie nécessaire à notre projet soit 16720 joules.</p>
+            <p>Notre problématique est : “Comment l’énergie solaire thermique permet-elle de générer de l'électricité propre et renouvelable”. Nous pensons utiliser le Soleil pour faire bouillir de l’eau. Dans ce but nous avons cherché la quantité d’énergie
+                nécessaire à faire bouillir 50 grammes d’eau. La vapeur produite pourrait alors être utilisée pour faire tourner une turbine et créer de l'électricité. L’énergie nécessaire à notre projet est de 16720 joules.</p>
         </div>
         <hr/>
         <div>
-            <h3>Jour 2 : date : 03/10/2017</h3>
+            <h3>Jour 2 : 03/10/2017</h3>
             <h4>Objectifs :</h4>
             <p>Tester la faisabilité de faire chauffer de l’eau avec la lumière.</p>
             <h4>Déroulement :</h4>
@@ -81,7 +81,7 @@
         </div>
         <hr/>
         <div>
-            <h3>Jour 3 : date : 4/10/2017</h3>
+            <h3>Jour 3 : 4/10/2017</h3>
             <h4>Objectifs :</h4>
             <p>Trouver un nouveau sujet, le notre est bateau.</p>
             <h4>Déroulement :</h4>
@@ -91,7 +91,7 @@
         </div>
         <hr/>
         <div>
-            <h3>Jour 4: date 5/10/2017</h3>
+            <h3>Jour 4 : date 5/10/2017</h3>
             <h4>Objectifs :</h4>
             <p>Demander le matériel nécessaire au laborantin.</p>
             <h4>Déroulement :</h4>
