--- a/solar.html
+++ b/solar.html
@@ -52,12 +52,12 @@
 
         <h2>L'énergie solaire</h2>
 
-        <p>L'énergie solaire est maintenant maîtrisée et de plus en plus utilisée. C'est une énergie renouvelable possédant un bon rendement (approximativement 15) par rapport aux autres sources d'énergies.<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un
+        <p>L'énergie solaire est maintenant maîtrisée et de plus en plus utilisée. C'est une énergie renouvelable possédant un bon rendement (approximativement 15%) par rapport aux autres sources d'énergies.<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un
             objet connecté, qu'il soit à l'intérieur ou à l'extérieur du bâtiment.<br/>
         </p>
 
         <p>
-            Le Capteur solaire permet de créer de l'énergie à partir d'une stimulation photonique d'une cellule photovoltaïque.<br/>
+            Le capteur solaire permet de créer de l'énergie à partir d'une stimulation photonique d'une cellule photovoltaïque.<br/>
         </p>
 
         <h3>Expériences</h3>
@@ -71,7 +71,7 @@
         <h4>Matériel :</h4>
 
         <p>x1 cellule solaire
-            <br/>x1 réostat
+            <br/>x1 rhéostat
             <br/>x1 ampèremètre
             <br/>x1 voltmètre
             <br/>x1 luxmètre</p>
@@ -156,7 +156,7 @@
         <p>Le panneau solaire est affecté par les changements de résistance, car comme U=RxI, nous aurions une droite dans le cas contraire.</p>
         <p>Nous faisons ensuite la tension en fonction de la résistance, nous obtenons ceci :</p>
         <img src="graph/sol/tr.png" />
-        <p>On observe une diminution de la tension, ce qui est logique puisque \(U=R\times I\) et que l'intensité augmente plus lentement que la résistance baisse mais pas de maniere linéaire. La résistance influe donc sur le voltage que peut produire un panneau solaire.</p>
+        <p>On observe une diminution de la tension, ce qui est logique puisque \(U=R\times I\) et que l'intensité augmente plus lentement que la résistance baisse mais pas de manière linéaire. La résistance influe donc sur le voltage que peut produire un panneau solaire.</p>
         <p>Nous pouvons ensuite refaire le même tableau en ajoutant la colonne de puissance, qui s'obtient par la simple multiplication de l'intensité et de la tension (P= UxI):</p>
 
 
@@ -253,19 +253,19 @@
         <img src="graph/sol/pt.png" />
 
         <p>Ce panneau solaire atteint son efficacité maximale quand la résistance du circuit est de 85&Omega;. Notre objet connecté doit donc avoir une résistance maximal de 85&Omega; ou moins si l'on en ajoute une.</p>
-        <p>Cepandant, nous ne connaissons pas l'évolution de la puissance en fonction de l'éclairage. C'est problématique car nous pourrions, par exemple, avoir un éclairage critique en dessous duquel la production d'énergie serait marginale.</p>
+        <p>Cependant, nous ne connaissons pas l'évolution de la puissance en fonction de l'éclairage. Pour aller plus loin, nous allons faire une nouvelle expérience pour exprimer la puissance électrique en fonction de la luminosité. On pourra alors connaitre la puissance maximale d'un objet utilisable dans des conditions standards.</p>
 
         <hr/>
 
         <h3>Expérience 2</h3>
 
-        <p>Nous allons maintenant chercher à caluler la puissance produite par la cellule en fonction du nombre de lux. Nous allons mettre une résistance de 85&Omega; pour avoir un courant électrique plus puissant permettant de réduire les erreurs dûes aux appareils.
+        <p>Nous allons maintenant chercher à calculer la puissance produite par la cellule en fonction du nombre de lux. Nous allons mettre une résistance de 85&Omega; pour avoir un courant électrique plus puissant permettant de réduire les erreurs dûes aux appareils.
           Dans cette expérience nous ferons varier l'intensité lumineuse.</p>
 
         <h4>Matériel :</h4>
 
         <p>x1 cellule solaire
-            <br/>x1 réostat
+            <br/>x1 rhéostat
             <br/>x1 ampèremètre
             <br/>x1 voltmètre
             <br/>x1 luxmètre</p>
@@ -274,9 +274,9 @@
 
         <table border="1">
             <tr>
-                <th>Tension (en V)</th>
-                <th>Intensité (en mA)</th>
-                <th>Intensité Lumineuse (en Lux)</th>
+                <th>Tension<br/>(en V)</th>
+                <th>Intensité<br/>(en mA)</th>
+                <th>Intensité Lumineuse<br/>(en Lux)</th>
             </tr>
             <tr>
                 <td>0,27</td>
@@ -324,7 +324,7 @@
 
         <img src="graph/sol/tl.png" />
 
-        <p>On observe que la Tension augmente avec l'intensité lumineuse.</p>
+        <p>On observe que la tension augmente avec l'intensité lumineuse.</p>
 
         <p>Ensuite, on peut tracer la courbe de la fonction qui à toute intensité lumineuse L associe une intensité :</p>
 
@@ -401,7 +401,7 @@
 
         <h4>Le support solaire</h4>
 
-        <p>Le support solaire est un support sur lequel on peut placer et brancher un objet connecté afin qu'il se charge à l'aide d'un petit panneau solaire placé sur le support; Ce support serait placé en intérieur (ou en extérieur) et alimenterait l'objet
+        <p>Le support solaire est un support sur lequel on peut placer et brancher un objet connecté afin qu'il se charge à l'aide d'un petit panneau solaire placé sur le support. Ce support serait placé en intérieur (ou en extérieur) et alimenterait l'objet
             avec la lumière de la pièce. Il est intéressant de noter que des objets connectés sans batteries alimentées par des panneaux solaires existent déjà.</p>
 
 
