--- a/biblio.html
+++ b/biblio.html
@@ -52,10 +52,10 @@
 
         <h2>Bibliographie</h2>
 
-        <p>Manufacturing Processes 1: Cutting Par Fritz Klocke
+        <p>Manufacturing Processes 1 : Cutting par Fritz Klocke
             <br/><br/>Handbook of Chemical and Biological Sensors publié par R.F Taylor,Jerome S. Schultz
-            <br/><br/>Mechanical Vibrations: Applications to Equipment Par Yvon Mori
-            <br/><br/>BIOMEDICAL INSTRUMENTATION AND MEASUREMENTS, 2nd Ed. Par ANANDA NATARAJAN, R.
+            <br/><br/>Mechanical Vibrations : Applications to Equipment par Yvon Mori
+            <br/><br/>BIOMEDICAL INSTRUMENTATION AND MEASUREMENTS, 2nd Ed. par ANANDA NATARAJAN, R.
             <br/><br/><a href="https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html">https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html</a>
             <br/><br/><a href="https://www.enocean.com/en/">https://www.enocean.com/en/</a>
         </p>
