--- a/presentation.html
+++ b/presentation.html
@@ -63,15 +63,15 @@
         <h3>L'énergie et les objets connectés</h3>
 
         <p>Le nombre d'objets connectés est en constante augmentation. De votre téléphone à votre montre en passant par votre réfrigérateur, ils sont partout. Nous sommes de plus en plus nombreux à en avoir et nous en avons de plus en plus par personne (selon l'institut GFK, on
-            estime leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu
+            estime leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tous ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu
             recyclées. Il faut donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce problème.</p>
         <hr/>
         <h3>Le problème du Lithium</h3>
 
         <p style="width:72%;float:left;">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer
-            l'environnement. Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluants la nature. Enfin le lithium est un élément alcalin très réactif. Par conséquent les batteries au lithium sont
-            inflammables et peuvent exploser si elles sont mal utilisées. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en envisageant 3 possibles solutions
-            au problème</p>
+            l'environnement. Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluant la nature. Enfin le lithium est un élément alcalin très réactif. Par conséquent les batteries au lithium sont
+            inflammables et peuvent exploser si elles sont mal utilisées. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en envisageant 3 solutions possibles
+            au problème.</p>
 
         <img style="width:20%;float:right;" src="ionexploding.jpg" />
         <hr/>
@@ -83,9 +83,9 @@
             électrique."
             <br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Effet_photovoltaïque">http://www.wikipedia.org/</a></sub></p>
         <img style="width:20%;float:right;" src="photovolt.png" />
-        <h4>Exemple :</h4>
+        <h4> Exemple d'application :</h4>
         <p style="width:72%;float:left;">C'est une solution classique et connue de tous mais qui reste très efficace. On pourrait imaginer un tout petit panneau solaire permettant de récupérer suffisamment d'énergie pour alimenter un objet connecté de temps en temps. Une autre solution
-            serait de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage de notre cas est que nous ne demandons pas énormément d'énergie, l'objet pourrait alors être en intérieur du moment qu'il reçoit assez de lumière.</p>
+            serait de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage d'un objet autonome est que, la plupart du temps, il ne demande pas énormément d'énergie. L'objet pourrait même être en intérieur du moment qu'il reçoit assez de lumière.</p>
 
 
         <hr/>
@@ -96,8 +96,8 @@
         <h4>Définition :</h4>
         <p style="width:72%;float:left;">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique."<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
         <img style="width:20%;float:right;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
-        <h4>Exemple :</h4>
-        <p style="width:72%;float:left;">Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par son activité pour alimenter
+        <h4> Exemple d'application :</h4>
+        <p style="width:72%;float:left;">Les applications de cette énergie sont immenses, et cette énergie trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course à pied utiliser l'énergie produite par son activité pour alimenter
             un bracelet connecté qui se chargerait de collecter les données sur la personne.</p>
 
 
@@ -112,9 +112,9 @@
             Seebeck."
             <br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
         <img style="width:20%;float:right;" src="seebeck.bmp" />
-        <h4>Exemple :</h4>
+        <h4> Exemple d'application :</h4>
         <p style="width:72%;float:left;">Il y a de très nombreuses applications possibles pour cette réaction. On pourrait imaginer des bracelets connectés pour le sport, avec une face en contact avec la peau du sportif et l'autre face à l'air libre et qui est donc moins chaude. On pourrait ainsi
-            récupérer l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Seebeck intégrés à des radiateurs, permettant ainsi de les contrôler finement.</p>
+            récupérer l'énergie produite par la chaleur du corps humain. Nous pourrions aussi envisager des modules à effet Seebeck intégrés à des radiateurs non électriques, permettant ainsi d'alimenter une commande électrique.</p>
 
     </section>
     <hr/>
