BETTER SOURCE + BETTER LINKS

--- a/biblio.html
+++ b/biblio.html
@@ -56,8 +56,8 @@
             <br/><br/>Handbook of Chemical and Biological Sensors publié par R.F Taylor,Jerome S. Schultz
             <br/><br/>Mechanical Vibrations : Applications to Equipment par Yvon Mori
             <br/><br/>BIOMEDICAL INSTRUMENTATION AND MEASUREMENTS, 2nd Ed. par ANANDA NATARAJAN, R.
-            <br/><br/><a href="https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html">https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html</a>
-            <br/><br/><a href="https://www.enocean.com/en/">https://www.enocean.com/en/</a>
+            <br/><br/><a target="_blank" href="https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html">https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html</a>
+            <br/><br/><a target="_blank" href="https://www.enocean.com/en/">https://www.enocean.com/en/</a>
         </p>
 
     </section>
