--- a/presentation.html
+++ b/presentation.html
@@ -79,9 +79,8 @@
 
         <h4>Définition :</h4>
 
-        <p style="width:72%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant
-            électrique."
-            <br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Effet_photovoltaïque">http://www.wikipedia.org/</a></sub></p>
+        <p style="width:72%;float:left;">"L'effet photovoltaïque désigne la capacité qu'ont certains matériaux, tels que le silicium, à convertir l'énergie contenue dans le rayonnement solaire en électricité."
+            <br/><sub>Source : <a target="_blank" href="http://www.luxol.fr/projet-toiture-solaire/14-effet-photovoltaique.html">http://www.luxol.fr/</a></sub></p>
         <img style="width:20%;float:right;" src="photovolt.png" />
         <h4> Exemple d'application :</h4>
         <p style="width:72%;float:left;">C'est une solution classique et connue de tous mais qui reste très efficace. On pourrait imaginer un tout petit panneau solaire permettant de récupérer suffisamment d'énergie pour alimenter un objet connecté de temps en temps. Une autre solution
@@ -95,7 +94,7 @@
         <h3>La Piezoélectricité</h3>
 
         <h4>Définition :</h4>
-        <p style="width:72%;float:left;">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique."<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
+        <p style="width:72%;float:left;">"La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique."<br/><sub>Source : <a target="_blank" href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
         <img style="width:20%;float:right;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
         <h4> Exemple d'application :</h4>
         <p style="width:72%;float:left;">Les applications de cette énergie sont immenses, et cette énergie trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course à pied utiliser l'énergie produite par
@@ -111,7 +110,7 @@
         <h4>Définition :</h4>
         <p style="width:72%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corps conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann
             Seebeck."
-            <br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
+            <br/><sub>Source : <a target="_blank" href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
         <img style="width:20%;float:right;" src="seebeck.bmp" />
         <h4> Exemple d'application :</h4>
         <p style="width:72%;float:left;">Il y a de très nombreuses applications possibles pour cette réaction. On pourrait imaginer des bracelets connectés pour le sport, avec une face en contact avec la peau du sportif et l'autre face à l'air libre et qui est donc moins chaude. On pourrait
